# cloudSQL

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  pr_body.md  pr_title.txt
.github/workflows/: ci.yml
docs/phases/: PHASE_1_CORE.md  PHASE_2_EXECUTION.md  PHASE_3_SQL_CATALOG.md  README.md
include/catalog/: catalog.hpp
include/common/: cluster_manager.hpp  common.h  config.hpp  value.hpp
include/distributed/: distributed_executor.hpp  raft_group.hpp  raft_manager.hpp  raft_types.hpp  shard_manager.hpp
include/executor/: evaluator.h  operator.hpp  query_executor.hpp  types.hpp  vectorized_operator.hpp
include/network/: rpc_client.hpp  rpc_message.hpp  rpc_server.hpp  server.hpp
include/parser/: expression.hpp  lexer.h  lexer.hpp  parser.hpp  statement.hpp  token.hpp
include/recovery/: log_record.hpp  recovery_manager.hpp
include/storage/: btree.h  btree_index.hpp  columnar_table.hpp  heap.h  heap_table.hpp  page.hpp  storage_manager.hpp
include/transaction/: transaction.hpp  transaction_manager.hpp
plans/: CPP_MIGRATION_PLAN.md  architecture.md
src/: main.cpp
src/catalog/: catalog.c  catalog.cpp
src/common/: config.c  config.cpp
src/distributed/: distributed_executor.cpp  raft_group.cpp  raft_manager.cpp
src/executor/: evaluator.c  operator.cpp  query_executor.cpp
src/network/: rpc_client.cpp  rpc_server.cpp  server.c  server.cpp
src/parser/: ast.c  expression.cpp  lexer.cpp  parser.cpp  statement.cpp
src/recovery/: log_manager.cpp  log_record.cpp  recovery_manager.cpp
src/storage/: btree.c  btree_index.cpp  buffer_pool_manager.cpp  columnar_table.cpp  heap.c  heap_table.cpp  lru_replacer.cpp  storage_manager.cpp
src/transaction/: lock_manager.cpp  transaction_manager.cpp
tests/: buffer_pool_tests.cpp  cloudSQL_tests.cpp  distributed_tests.cpp  lock_manager_tests.cpp  multi_raft_tests.cpp  recovery_manager_tests.cpp  recovery_tests.cpp  run_test.sh  server_tests.cpp  statement_tests.cpp  test_utils.hpp  transaction_manager_tests.cpp
tests/logic/: indexes.slt  joins.slt  limit_offset.slt  slt_runner.py  transactions.slt
